--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE <!DOCTYPE html>
-<html>
+<html lang="en-us">
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <title>my html</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <script src="main.js"></script>
 </head>
 <body>
-    
+    <h1>My github</h1>
+    <img src="https://assets-cdn.github.com/images/modules/open_graph/github-octocat.png"
+    <br>
+    <h3>Github link</h3>
+    <li><a target-"_blank" href=https://github.com/fnusandhiya">GitHub</a></li>
 </body>
 </html>
