--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     <img src="https://assets-cdn.github.com/images/modules/open_graph/github-octocat.png"
     <br>
     <h3>Github link</h3>
-    <li><a target-"_blank" href=https://github.com/fnusandhiya">GitHub</a></li>
+    <li><a target-"_blank" href="https://github.com/fnusandhiya">GitHub</a></li>
 </body>
 </html>
