--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1>My github</h1>
-    <img src="https://assets-cdn.github.com/images/modules/open_graph/github-octocat.png"
+    <img src="https://assets-cdn.github.com/images/modules/open_graph/github-octocat.png"/>
     <br>
     <h3>Github link</h3>
     <li><a target-"_blank" href="https://github.com/fnusandhiya">GitHub</a></li>
