--- a/cloudiness.html
+++ b/cloudiness.html
@@ -41,16 +41,11 @@
         <div class="col-md-8" style="background-color:rgb(226, 225, 225);">
             <div class="box box-left">
                 <section id="intro">
-                    <h1>Summary: Latitude vs. X</h1>
+                    <h1>Cloudiness</h1>
                     <hr>
-                    <img src="Resources/assets/images/Fig1.png" alt="maxtemp" height="200" width="200" align = "left">
-                    <p>The purpose of this project was to analyze how weather changes as you get closer to the equator.  To accomplish this analysis,
-                    we first pulled data from the OpenWeatherMap API to assemble a dataset of over 500 cities.
-                    </p>
-                    <p>After assembling the dataset, we used MatplotLib to plot various aspects of the weather vs latitude.  Factors we looked at included:
-                    temperature, cloudiness, humidity, and wind speed.  This site provides the source data and visualizations created as part of the 
-                    analysis, as well as explanations and descriptions of any trends and correlations witnessed.
-                    </p>
+                    <img src="Resources/assets/images/Fig3.png" alt="cloud" height="400" width="600" align="center">
+                    <p>There is no relationship between latitude and cloudiness.  The percent of cloudiness does not vary with different latitudes.
+                        </p>
                 </section>
 
     <div class="col-md-7 sidenav">
