--- a/index.html
+++ b/index.html
@@ -86,5 +86,14 @@
     </div>
 
 </div>
+
+<div class="first_footer">
+
+</div>
+<footer class="Sec_footer">
+        <div class="copy_right">
+            <p>Copyright Coding Bootcamp 2018</p>
+        </div>
+    </footer>
 </body>
 </html>
