--- a/cloudiness.html
+++ b/cloudiness.html
@@ -81,5 +81,13 @@
     </div>
 
 </div>
+<div class="first_footer">
+
+</div>
+<footer class="Sec_footer">
+        <div class="copy_right">
+            <p>Copyright Coding Bootcamp 2018</p>
+        </div>
+    </footer>
 </body>
 </html>
